--- a/index.html
+++ b/index.html
@@ -34,7 +34,50 @@
         </div>
       </section>
 
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+        <div class="cards">
+          <div class="cards__item">
+            <img src="images/techniques/1.png" alt="книга «101 эссе, которые изменят ваше мышление»" class="cards__image">
+            <h4 class="cards__title">Два вида внимания</h4>
+            <p class="cards__description">
+              Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.
+            </p>
+          </div>
+          <div class="cards__item">
+            <img src="images/techniques/2.png" alt="Жан Жозеф Перро" class="cards__image">
+            <h4 class="cards__title">Recall</h4>
+            <p class="cards__description">
+              Вспоминайте изученное — это позволит соединить разрозненные порции памяти.
+            </p>
+          </div>
+          <div class="cards__item">
+            <img src="images/techniques/3.png" alt="Всемирный торговый центр" class="cards__image">
+            <h4 class="cards__title">Интерливинг</h4>
+            <p class="cards__description">
+              Изучайте несколько навыков одновременно, они обогощают друг друга.
+            </p>
+          </div>
+          <div class="cards__item">
+            <img src="images/techniques/4.png" alt="Виниловая пластинка" class="cards__image">
+            <h4 class="cards__title">Вопросы </h4>
+            <p class="cards__description">
+              Слушая преподавателя, придумайте хороший вопрос, который вас действительно волнует.
+            </p>
+          </div>
+          <div class="cards__item">
+            <img src="images/techniques/5.png" alt="Ежедневники" class="cards__image">
+            <h4 class="cards__title">Иллюзия компетентности</h4>
+            <p class="cards__description">
+              Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.
+            </p>
+          </div>
+        </div>
+      </section>
+
       <section class="digits">
+
       </section>
 
       <section class="feynman">
