Рефакторинг изображений и верстка блока resources

--- a/index.html
+++ b/index.html
@@ -165,6 +165,16 @@
           </div>
         </div>
       </section>
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+        <div class="resources__logo-zone">
+          <img src="images/resources/1.svg" alt="Arzamas" class="resources__logo">
+          <img src="images/resources/2.svg" alt="Arzamas" class="resources__logo">
+          <img src="images/resources/3.svg" alt="Arzamas" class="resources__logo">
+          <img src="images/resources/4.svg" alt="Arzamas" class="resources__logo">
+        </div>
+      </section>
     </main>
     <footer class="footer">
 
