--- a/index.html
+++ b/index.html
@@ -170,14 +170,35 @@
         <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
         <div class="resources__logo-zone">
           <img src="images/resources/1.svg" alt="Arzamas" class="resources__logo">
-          <img src="images/resources/2.svg" alt="Arzamas" class="resources__logo">
-          <img src="images/resources/3.svg" alt="Arzamas" class="resources__logo">
-          <img src="images/resources/4.svg" alt="Arzamas" class="resources__logo">
+          <img src="images/resources/2.svg" alt="N + 1" class="resources__logo">
+          <img src="images/resources/3.svg" alt="STRELKA" class="resources__logo">
+          <img src="images/resources/4.svg" alt="ПОЛКА" class="resources__logo">
         </div>
       </section>
     </main>
     <footer class="footer">
-
+      <div class="footer__columns">
+        <div class="footer__column footer__column_content_copyright">
+          <img src="images/logo_place_footer.svg" alt="Яндекс Практикум" class="logo logo_place_footer">
+          <p class="footer__author">&copy; Виктор Абанькин</p>
+        </div>
+        <div class="footer__column footer__column_content_info">
+          <p class="footer__column-heading">О Практикуме</p>
+          <div class="footer__column-links">
+            <a href="#" class="footer__column-link">Главная</a>
+            <a href="#" class="footer__column-link">Концепция</a>
+            <a href="#" class="footer__column-link">Наставники</a>
+          </div>
+        </div>
+        <div class="footer__column footer__column_content_social">
+          <p class="footer__column-heading">Соцсети</p>
+          <div class="footer__column-links">
+            <a href="#" class="footer__column-link"><img src="images/facebook_color_white.svg" alt="facebook" class="footer__social-icon">Facebook</a>
+            <a href="#" class="footer__column-link"><img src="images/vk_color_white.svg" alt="vk" class="footer__social-icon">ВКонтакте</a>
+            <a href="#" class="footer__column-link"><img src="images/instagram_color_white.svg" alt="instagram" class="footer__social-icon">Instagram</a>
+          </div>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
