--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img src="images/logo_place_header.svg" alt="Яндекс Практикум" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-      <a href="#" class="header__link">Узнать</a>
+      <a href="#" class="header__link">Узнать →</a>
       </p>
       <img src="images/header-image.png" alt="«Опять двойка» — картина художника Фёдора Решетникова" class="header__main-illustration">
       <div class="header__square-pic"></div>
