--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="#" class="header__link">Узнать →</a>
       </p>
       <img src="images/header-image.png" alt="«Опять двойка» — картина художника Фёдора Решетникова" class="header__main-illustration">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
       <section class="description">
