--- a/index.html
+++ b/index.html
@@ -76,6 +76,44 @@
         </div>
       </section>
 
+      <section class="video">
+        <h2 class="section-title">Видео на TED</h2>
+        <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+        <div class="video__iframes">
+          <iframe
+                  class="video__iframe"
+                  width="560"
+                  height="315"
+                  src="https://www.youtube.com/embed/5MgBikgcWnY"
+                  title="YouTube video player"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen>
+            </iframe>
+          <iframe
+                  class="video__iframe"
+                  width="560"
+                  height="315"
+                  src="https://www.youtube.com/embed/arj7oStGLkU"
+                  title="YouTube video player"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen>
+            </iframe>
+        </div>
+      </section>
+      <section class="oakley">
+        <div class="two-columns">
+          <h3 class="two-columns__brief">История Барбары Оакли</h3>
+          <div class="two-columns__main-text">
+            <div class="two-columns__paragraph">
+              С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии рна изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», вашы добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="feynman">
+      </section>
+
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <h3 class="section-subtitle">Про учёбу и мозг</h3>
@@ -115,9 +153,6 @@
           </div>
         </div>
       </section>
-
-      <!-- <section class="feynman">
-      </section> -->
 
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
@@ -165,6 +200,7 @@
           </div>
         </div>
       </section>
+
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
