Сверстан блок khan

--- a/index.html
+++ b/index.html
@@ -157,6 +157,22 @@
         </div>
       </section>
 
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <q class="khan__quote">
+            Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
+          </q>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссёр, продюсер</p>
+          <div class="khan__book-container">
+            <img src="images/book.png" alt="книга Весь мир - школа" class="khan__book-pic">
+            <a href="#" class="khan__buy-link">Купить книгу →</a>
+          </div>
+        </div>
+      </section>
+
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <h3 class="section-subtitle section-subtitle_theme_dark">От Джоша Кауфмана</h3>
