Добавление элемениа triangle в блок kaufman

--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
+        <img src="images/kaufman-triangle.svg" alt="треугольник" class="kaufman__triangle rotation">
       </section>
 
       <section class="resources">
