--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
             </p>
@@ -82,8 +82,6 @@
         <div class="video__iframes">
           <iframe
                   class="video__iframe"
-                  width="560"
-                  height="315"
                   src="https://www.youtube.com/embed/5MgBikgcWnY"
                   title="YouTube video player"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -220,7 +218,7 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <img src="images/kaufman-triangle.svg" alt="треугольник" class="kaufman__triangle rotation">
+        <div class="kaufman__triangle rotation"></div>
       </section>
 
       <section class="resources">
@@ -241,7 +239,7 @@
           <p class="footer__author">&copy; Виктор Абанькин</p>
         </div>
         <div class="footer__column footer__column_content_info">
-          <p class="footer__column-heading">О Практикуме</p>
+          <h4 class="footer__column-heading">О Практикуме</h4>
           <ul class="footer__column-links">
             <li> <a href="https://practicum.yandex.ru/profile/web-plus/" target="_blank" class="footer__column-link">Главная</a></li>
            <li><a href="#" class="footer__column-link">Концепция</a></li>
@@ -249,7 +247,7 @@
           </ul>
         </div>
         <div class="footer__column footer__column_content_social">
-          <p class="footer__column-heading">Соцсети</p>
+          <h4 class="footer__column-heading">Соцсети</p>
           <ul class="footer__column-links">
             <li>
               <a href="https://www.facebook.com/yandex.praktikum" target="_blank" class="footer__column-link"><img src="images/facebook_color_white.svg" alt="facebook" class="footer__social-icon">Facebook</a>
