--- a/index.html
+++ b/index.html
@@ -30,50 +30,50 @@
             <p class="two-columns__paragraph">
               Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
             </p>
-          </div>
+          </d>
         </div>
       </section>
 
       <section class="techniques" id="techniques">
         <h2 class="section-title">Техники обучения</h2>
-        <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
-        <div class="cards">
-          <div class="cards__item">
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <ul class="cards">
+          <li class="cards__item">
             <img src="images/techniques/1.png" alt="книга «101 эссе, которые изменят ваше мышление»" class="cards__image">
             <h4 class="cards__title">Два вида внимания</h4>
             <p class="cards__description">
               Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.
             </p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img src="images/techniques/2.png" alt="Жан Жозеф Перро" class="cards__image">
             <h4 class="cards__title">Recall</h4>
             <p class="cards__description">
               Вспоминайте изученное — это позволит соединить разрозненные порции памяти.
             </p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img src="images/techniques/3.png" alt="Всемирный торговый центр" class="cards__image">
             <h4 class="cards__title">Интерливинг</h4>
             <p class="cards__description">
               Изучайте несколько навыков одновременно, они обогощают друг друга.
             </p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img src="images/techniques/4.png" alt="Виниловая пластинка" class="cards__image">
             <h4 class="cards__title">Вопросы </h4>
             <p class="cards__description">
               Слушая преподавателя, придумайте хороший вопрос, который вас действительно волнует.
             </p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img src="images/techniques/5.png" alt="Ежедневники" class="cards__image">
             <h4 class="cards__title">Иллюзия компетентности</h4>
             <p class="cards__description">
               Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.
             </p>
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
 
       <section class="video">
@@ -90,8 +90,6 @@
             </iframe>
           <iframe
                   class="video__iframe"
-                  width="560"
-                  height="315"
                   src="https://www.youtube.com/embed/arj7oStGLkU"
                   title="YouTube video player"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -102,59 +100,59 @@
       </section>
       <section class="oakley">
         <div class="two-columns">
-          <h3 class="two-columns__brief">История Барбары Оакли</h3>
+          <h2 class="two-columns__brief">История Барбары Оакли</h2>
           <div class="two-columns__main-text">
-            <div class="two-columns__paragraph">
+            <p class="two-columns__paragraph">
               С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии рна изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», вашы добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
-            </div>
+            </p>
           </div>
         </div>
       </section>
 
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть</h3>
+        <p class="feynman__subtitle">Выучить и не забыть</p>
         <a href="https://lifehacker.ru/metod-fejnmana/" target="_blank" class="feynman__link">Подробнее &#8594;</a>
       </section>
 
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
-        <h3 class="section-subtitle">Про учёбу и мозг</h3>
-        <div class="table">
-          <div class="table__cell">
+        <p class="section-subtitle">Про учёбу и мозг</p>
+        <ul class="table">
+          <li class="table__cell">
             <h4 class="table__heading">86 миллиардов</h4>
             <p class="table__text">Число нейронов в мозге человека</p>
-          </div>
-          <div class="table__cell">
+          </li>
+          <li class="table__cell">
             <h4 class="table__heading">2,1 миллиарда</h4>
             <p class="table__text">Число нуждающихся в повышении квалификации </p>
             <p class="table__text">Всемирный Банк, 2017</p>
-          </div>
-          <div class="table__cell">
+          </li>
+          <li class="table__cell">
             <h4 class="table__heading">1000 терабайт</h4>
             <p class="table__text">Объём памяти человека</p>
-          </div>
-          <div class="table__cell">
+          </li>
+          <li class="table__cell">
             <h4 class="table__heading">500 триллионов</h4>
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
-          </div>
-          <div class="table__cell">
+          </li>
+          <li class="table__cell">
             <h4 class="table__heading">420 миллионов</h4>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-          </div>
-          <div class="table__cell">
+          </li>
+          <li class="table__cell">
             <h4 class="table__heading">17-20 лет</h4>
             <p class="table__text">Пик обучаемости</p>
-          </div>
-          <div class="table__cell">
+          </li>
+          <li class="table__cell">
             <h4 class="table__heading">1885 год</h4>
             <p class="table__text">Открытие кривой забывания</p>
-          </div>
-          <div class="table__cell">
+          </li>
+          <li class="table__cell">
             <h4 class="table__heading">1889 год</h4>
             <p class="table__text">Открытие условного рефлекса</p>
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
 
       <section class="khan">
@@ -175,55 +173,55 @@
 
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-        <h3 class="section-subtitle section-subtitle_theme_dark">От Джоша Кауфмана</h3>
-        <div class="table table_theme_dark">
-          <div class="table__cell table__cell_theme_dark">
+        <p class="section-subtitle section-subtitle_theme_dark">От Джоша Кауфмана</p>
+        <ul class="table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">1</h4>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">2</h4>
             <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">3</h4>
             <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">4</h4>
             <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">5</h4>
             <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">6</h4>
             <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">7</h4>
             <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">8</h4>
             <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">9</h4>
             <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">10</h4>
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
-          </div>
-        </div>
+          </li>
+        </ul>
         <div class="kaufman__triangle rotation"></div>
       </section>
 
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
-        <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <ul class="resources__logo-zone">
           <li><a href="https://arzamas.academy/" target="_blank"><img src="images/resources/1.svg" alt="Arzamas" class="resources__logo"></a></li>
           <li><a href="https://nplus1.ru/" target="_blank"><img src="images/resources/2.svg" alt="N + 1" class="resources__logo"></a></li>
@@ -240,25 +238,19 @@
         </div>
         <div class="footer__column footer__column_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
-          <ul class="footer__column-links">
-            <li> <a href="https://practicum.yandex.ru/profile/web-plus/" target="_blank" class="footer__column-link">Главная</a></li>
-           <li><a href="#" class="footer__column-link">Концепция</a></li>
-            <li><a href="#" class="footer__column-link">Наставники</a></li>
-          </ul>
+          <nav class="footer__column-links">
+            <a href="https://practicum.yandex.ru/profile/web-plus/" target="_blank" class="footer__column-link">Главная</a>
+            <a href="#" class="footer__column-link">Концепция</a>
+            <a href="#" class="footer__column-link">Наставники</a>
+          </nav>
         </div>
         <div class="footer__column footer__column_content_social">
-          <h4 class="footer__column-heading">Соцсети</p>
-          <ul class="footer__column-links">
-            <li>
+          <h4 class="footer__column-heading">Соцсети</h4>
+          <nav class="footer__column-links">
               <a href="https://www.facebook.com/yandex.praktikum" target="_blank" class="footer__column-link"><img src="images/facebook_color_white.svg" alt="facebook" class="footer__social-icon">Facebook</a>
-            </li>
-            <li>
               <a href="https://vk.com/yandex.praktikum" target="_blank" class="footer__column-link"><img src="images/vk_color_white.svg" alt="vk" class="footer__social-icon">ВКонтакте</a>
-            </li>
-            <li>
               <a href="https://www.instagram.com/yndx.practicum/" target="_blank" class="footer__column-link"><img src="images/instagram_color_white.svg" alt="instagram" class="footer__social-icon">Instagram</a>
-            </li>
-          </ul>
+          </nav>
         </div>
       </div>
     </footer>
