Изменил subtitle секции video

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       <section class="video">
         <h2 class="section-title">Видео на TED</h2>
-        <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
           <iframe
                   class="video__iframe"
