--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img src="images/logo_place_header.svg" alt="Яндекс Практикум" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-      <a href="#techniques" class="header__link">Узнать &#8594;</a>
+      <a href="#techniques" class="header__link">Узнать &rarr;</a>
       </p>
       <img src="images/header-image.png" alt="«Опять двойка» — картина художника Фёдора Решетникова" class="header__main-illustration">
       <div class="header__square-pic rotation"></div>
@@ -112,7 +112,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть</p>
-        <a href="https://lifehacker.ru/metod-fejnmana/" target="_blank" class="feynman__link">Подробнее &#8594;</a>
+        <a href="https://lifehacker.ru/metod-fejnmana/" target="_blank" class="feynman__link">Подробнее &rarr;</a>
       </section>
 
       <section class="digits">
@@ -166,7 +166,7 @@
           <p class="khan__quote-author-subline">Кинорежиссёр, продюсер</p>
           <div class="khan__book-container">
             <img src="images/book.png" alt="книга Весь мир - школа" class="khan__book-pic">
-            <a href="https://www.labirint.ru/books/483575/" target="_blank" class="khan__buy-link">Купить книгу &#8594;</a>
+            <a href="https://www.labirint.ru/books/483575/" target="_blank" class="khan__buy-link">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
